--- a/app/src/main/res/layout/addbasicresource_xml.xml
+++ b/app/src/main/res/layout/addbasicresource_xml.xml
@@ -83,7 +83,7 @@
                     android:text="上级资源 "
 
                     />
-                <Spinner
+                <TextView
                     android:id="@+id/parentId"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
