--- a/app/src/main/res/layout/permissions_pop_xml.xml
+++ b/app/src/main/res/layout/permissions_pop_xml.xml
@@ -20,7 +20,7 @@
         android:layout_margin="20dp"
         android:id="@+id/lv_tree"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200dp"
         android:cacheColorHint="@android:color/transparent"
         android:divider="#aaa"
         android:dividerHeight="1px"/>
