--- a/app/src/main/res/layout/role_data_xml.xml
+++ b/app/src/main/res/layout/role_data_xml.xml
@@ -91,30 +91,39 @@
 
         </LinearLayout>
 
-
         <LinearLayout
-            android:orientation="horizontal"
+            android:gravity="right|center"
             android:layout_width="match_parent"
-            android:layout_height="40dp">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <Button
-                    android:layout_toLeftOf="@+id/del_btn"
-                    android:text="修改"
-                    android:textColor="@color/white"
-                    android:id="@+id/edit_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp" />
-                <Button
-                    android:layout_alignParentRight="true"
-                    android:text="删除"
-                    android:textColor="@color/white"
-                    android:id="@+id/del_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp" />
-            </RelativeLayout>
+            android:layout_height="50dp">
 
+            <Button
+                android:layout_marginLeft="4dp"
+                android:id="@+id/Permission_btn"
+                android:textColor="@color/colorPrimary"
+                android:background="@drawable/btn_selected"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:text="权限分配"
+                />
+            <Button
+                android:layout_marginLeft="4dp"
+                android:id="@+id/edit_btn"
+                android:textColor="@color/colorPrimary"
+                android:background="@drawable/btn_selected"
+                android:layout_width="50dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="4dp"
+                android:text="编辑"
+                />
+            <Button
+
+                android:id="@id/del_btn"
+                android:textColor="@color/colorPrimary"
+                android:background="@drawable/btn_selected"
+                android:layout_width="50dp"
+                android:layout_height="30dp"
+                android:text="删除"
+                />
         </LinearLayout>
 
 
