--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,9 @@
     <color name="monsoon">#777777</color>
     <color name="textcolor_t">#393838</color>
     <color name="menu_item_press">#2e000000</color>
+    <color name="black">#000000</color>
     <color name="del_color">#ea4949</color>
+    <color name="red">#ea4949</color>
     <color name="primary">#3bc7b2</color>
     <color name="primary_dark">#f4f8ff</color>
     <color name="primary_darker">#3bc7b2</color>
